# dialo-clone

./: Dockerfile  pyproject.toml
src/: db_instance.py  main.py
src/auth/: auth_bearer.py  auth_handler.py
src/models/: extension_model.py  queue_model.py  user_model.py
src/routers/extension/: utils.py  views.py
src/routers/queue/: utils.py  views.py
src/routers/user/: views.py
src/schemas/: extension_schema.py  queue_schema.py  response_model.py  user_schema.py
